Fix horizontal scrolling arrow alignment, height parity and missing range image placeholders

--- a/src/App.css
+++ b/src/App.css
@@ -750,18 +750,27 @@ ul.about-bullets {
 }
 
 .react-horizontal-scrolling-menu--wrapper {
-  position: relative;
 }
 
 .react-horizontal-scrolling-card {
   width: auto;
   /* margin-right: 20px; */
   vertical-align: top;
-  height: 98%;
+  height: 100%;
 }
 
 .react-horizontal-scrolling-arrow-container {
-  display: block;
+  display: flex;
+  align-items: center;
+}
+
+.react-horizontal-scrolling-menu--scroll-container {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+.react-horizontal-scrolling-menu--scroll-container::-webkit-scrollbar {
+  display: none;
 }
 
 @media only screen and (max-width: 600px) {
@@ -775,14 +784,6 @@ ul.about-bullets {
 
 .react-horizontal-scrolling-arrow {
   margin: 0;
-  position: absolute;
-  top: 40px;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  opacity: 0.5;
-  background-color: #000;
-  color: #fff;
 }
 
 .leaflet-control {
